<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="choose_done">选好了，安装</string>
    <string name="choose_text">已选中%1$d个应用</string>
    <string name="quality_goods">推荐</string>
    <string name="brand">榜单</string>
    <string name="mine">我的</string>
    <string name="apps">应用</string>
    <string name="game">游戏</string>
    <string name="after_do">以后再说</string>
    <string name="now_update">立即更新</string>
    <string name="no_result_find">没找到相关应用!</string>
    <string name="top_three_title">今日编辑选鉴</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="retry">重试</string>
    <string name="update">更新</string>
    <string name="start">打开</string>
    <string name="uninstall">卸载</string>
    <string name="uninstalling">卸载中</string>
    <string name="install">安装</string>
    <string name="download">下载</string>
    <string name="unknow">未知</string>
    <string name="tip">提示</string>
    <string name="login">立即登录</string>
    <string name="login_out">立即退出</string>
    <string name="login_out_tips">确定要退出云账号吗？</string>
    <string name="sync_app_dialog_go_on">确定要退出云账号吗？</string>
    <string name="common_tips">提示信息...</string>
    <string name="sync_app_dialog_tips">本次同步将覆盖上次信息</string>
    <string name="received_ok">已领取</string>
    <string name="not_login">您还未登录云账号，请登录账号后领取礼包</string>
    <string name="open_gift_game">打开游戏</string>
    <string name="tip_gfit_option">激活码</string>
    <string name="usage">使用方法</string>
    <string name="cancel_gift_game">朕知道了</string>
    <string name="alert_button_yes">确认</string>
    <string name="alert_title">提示</string>
    <string name="toast_content_8">打开应用失败</string>
    <string name="toast_exit">再按一下就退出应用市场了哟！</string>
    <string name="errot_no_market">未安装应用市场,操作失败</string>
    <string name="toast_net_error">网络连接失败，请检查设置</string>
    <string name="toast_game_detail_feedback_empty">请输入反馈信息!</string>
    <string name="toast_error_code_sd_nosapce">没有足够的存储空间</string>
    <string name="toast_tip_mobile_data">您正在使用移动网络，建议切换到WIFI</string>
    <string name="toast_tip_download_only_wifi">当前处于2G/3G/4G网络，下载将耗费流量，是否继续下载？</string>
    <string name="download_after">稍后下载</string>
    <string name="download_default_more_title">机智如你肯定喜欢</string>
    <string name="download_footer_type_content1">下载了</string>
    <string name="download_footer_type_content">的人还下载了这些</string>
    <string name="dialog_tip_download_delete">确定要删除该下载任务吗？</string>
    <string name="delete_cancel">取消</string>
    <string name="task_unexsit">任务不存在</string>
    <string name="toast_comment_cannot_empty">评论不能为空哦，亲</string>
    <string name="toast_comment_sucess">发表评论成功,审核通过后将显示</string>
    <string name="toast_comment_error">发表评论失败</string>
    <string name="toast_game_feedback_empty">反馈不能为空哦，亲</string>
    <string name="toast_feedback_sucess">反馈已经收到，谢谢您的反馈！</string>
    <string name="toast_feedback_logout">未登录不能提交反馈哦，亲</string>
    <string name="feedback">反馈</string>
    <string name="point">%1$s分</string>
    <string name="game_list_theme_title">小编导读</string>
    <string name="version_update">版本更新</string>
    <string name="dlg_update_title">更新提示</string>
    <string name="dlg_update_downloading">正在下载</string>
    <string name="dlg_update_error">下载失败,请重新下载!</string>
    <string name="dlg_version_conflict">使用新版本前,需要卸载之前的老版本,为您带来的不便敬请谅解!</string>
    <string name="notification_download_start">%1$s开始下载</string>
    <string name="notification_download_finish">%1$s下载完成</string>
    <string name="notification_download_finish_message">%1$s下载完成,请点击安装!</string>
    <string name="notification_download_error">%1$s下载暂停,稍后请重试!</string>
    <string name="notification_download_pause">%1$s 已暂停</string>
    <string name="notification_download_pause_all">所有下载暂停，将在WLAN连接后继续下载</string>
    <string name="clickandopen">安装成功！点击打开</string>
    <string name="login_login_btn">立即登录</string>
    <string name="register_digits"><![CDATA[0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`~!@#^$%^&*-=_+\|<>,./?(){}[]:";']]></string>
    <string name="protocol_title">使用条款</string>
    <string name="setting">设置</string>
    <string name="turn_on_download_under_WLAN">开启只允许在有WIFI连接时下载</string>
    <string name="set_only_WLAN">WIFI环境下下载</string>
    <string name="set_folder">开启桌面文件夹快捷方式</string>
    <string name="hot_game_folder">精选应用文件夹</string>
    <string name="set_feedback">意见反馈</string>
    <string name="set_help">帮助</string>
    <string name="set_about">关于</string>
    <string name="set_about_jolo">V%1$s</string>
    <string name="set_do_not_update">很棒，已经是最新版本，不需要更新！</string>
    <string name="set_remember_update">新版本更好体验，记得更新哦</string>
    <string name="set_wait_check_update">检测版本中，请稍后</string>
    <string name="set_net_title">网络设置</string>
    <string name="set_net_msg">无法连接网络，请在设置中打开WLAN或移动网络</string>
    <string name="set_cancel">取消</string>
    <string name="set_goto_setting">设置</string>
    <string name="notice_caution">通知栏提示</string>
    <string name="notify_game_setting">更新提醒</string>
    <string name="notify_game_receive_push_content">及时获取您的常用应用的更新提醒</string>
    <string name="receive_push_notification">消息提醒</string>
    <string name="receive_push_content">市场公告及活动资讯知会</string>
    <string name="garbage_clean_notification">垃圾清理提醒</string>
    <string name="garbage_clean_notification_content">当手机垃圾及内存占用过多时提醒您及时清理</string>
    <string name="download_settings">下载设置</string>
    <string name="auto_update">零流量更新</string>
    <string name="auto_update_thrid">零流量升级</string>
    <string name="auto_update_content">WLAN网络下，且锁屏时自动升级</string>
    <string name="auto_update_content_thrid">WIFI网络下,锁屏时自动下载升级包</string>
    <string name="save_traffic_mode">省流量模式</string>
    <string name="save_traffic_mode_content">2G 3G 4G网络环境下不加载图片</string>
    <string name="install_background">省心装</string>
    <string name="install_description">开启后无需频繁点击安装流程相关操作</string>
    <string name="clear_cache">清理缓存</string>
    <string name="clear_cache_content">清理图标，内容等缓存文件</string>
    <string name="mygames">我的游戏</string>
    <string name="my_gift">我的礼包</string>
    <string name="my_game_unexist">游戏不存在</string>
    <string name="my_waiting">等待中</string>
    <string name="my_intalling">安装中</string>
    <string name="my_more_game">更多游戏</string>
    <string name="my_update_game">检测到游戏有新版本，立即更新体验更多新奇好玩吧！</string>
    <string name="dlg_exit_tv">有游戏正在下载中,是否退出客户端?</string>
    <string name="dlg_exit_ck">退出后继续下载</string>
    <string name="dlg_waiting_tv">正在加载，请稍候&#8230;</string>
    <string name="dlg_game_title">操作选项</string>
    <string name="dlg_cancel_download">取消下载</string>
    <string name="dlg_start_game">启动游戏</string>
    <string name="dlg_uninstall_game">卸载游戏</string>
    <string name="dlg_delete_pkg">删除安装包</string>
    <string name="dlg_pause_download">暂停下载</string>
    <string name="dlg_install_game">安装游戏</string>
    <string name="dlg_goto_gamedetails">进入详情</string>
    <string name="dlg_update_game">更新游戏</string>
    <string name="dlg_continue_download">继续下载</string>
    <string name="dlg_download_game">下载游戏</string>
    <string name="gamedetail_tab_gamedetail">游戏详情</string>
    <string name="gamedetail_detail_btn">问题反馈</string>
    <string name="gamedetail_gift_title">礼包</string>
    <string name="gamedetail_brief_title">简介</string>
    <string name="gamedetail_brief_expend">展开</string>
    <string name="gamedetail_brief_unexpend">收起</string>
    <string name="gamedetail_tactics_title">攻略</string>
    <string name="gamedetail_recommend_title">您可能也会喜欢:</string>
    <string name="gamedetail_userassess_btn">发表评论</string>
    <string name="gamedetail_detail_version">版本: %1$s</string>
    <string name="gamedetail_detail_time">时间: %1$s</string>
    <string name="gamedetail_detail_size">大小: %1$s</string>
    <string name="gamedetail_detail_class">分类: %1$s</string>
    <string name="gamedetail_detail_cp">作者: %1$s</string>
    <string name="game_comment_title">评论</string>
    <string name="hottest_comment_title">点评</string>
    <string name="game_comment_hit">请输入评论（100字以内）</string>
    <string name="gamedetail_detail_editor_comment_title">点评:</string>
    <string name="gamedetail_language_chinese">中文</string>
    <string name="gamedetail_language_english">英文</string>
    <string name="gamedetail_language_unknow">其他</string>
    <string name="gamedetail_lang_tv">%1$s | %2$s次下载</string>
    <string name="gamedetail_lang_tv2">%1$s</string>
    <string name="gamedetail_gift_item_tv">%1$s（点击领取！）</string>
    <string name="community_gift_progress_title">剩余:</string>
    <string name="community_gift_lasttime">截至时间: %1$s</string>
    <string name="search_title">游戏搜索</string>
    <string name="search_keyword_empty">请输入搜索关键字</string>
    <string name="search_item_tip_text">以下结果由第三方应用市场搜索提供</string>
    <string name="feedback_title">帮助与反馈</string>
    <string name="app_report">应用举报</string>
    <string name="feedback_msg_empty">请输入您的建议或者疑问!</string>
    <string name="pl_select_class">请选择反馈类型</string>
    <string name="feedback_send_text">提交</string>
    <string name="feedback_more">还有问题？点这里反馈</string>
    <string name="help_title">帮助</string>
    <string name="n_games_update">&#160;款游戏可以更新！</string>
    <string name="has">有</string>
    <string name="n_pirate_games">款山寨游戏</string>
    <string name="and">和</string>
    <string name="check_all">查看全部</string>
    <string name="pirate_game">替换游戏</string>
    <string name="replace">替换</string>
    <string name="update_all">一键更新</string>
    <string name="n_games_pirate">&#160;款山寨游戏，赶紧替换成正版的吧~</string>
    <string name="not_show_again">不再显示</string>
    <string name="alert_replace">山寨游戏替换后游戏历史数据和存档可能会被删除，请您做好备份。确认替换吗？</string>
    <string name="reload">网络好像在撒娇，点击屏幕试试</string>
    <string name="reload_tip">网络不给力</string>
    <string name="nonet_connect">暂无网络连接</string>
    <string name="questing">请求中,请不要重复操作</string>
    <string name="remind_title">您已经好久没来逛逛了，亲</string>
    <string name="remind_content">又新增了很多免费精品游戏，超好玩哦~</string>
    <string name="game_comment_title2">评论(%1$s)</string>
    <string name="gamedetail_news">新闻</string>
    <string name="gamedetail_forum">论坛</string>
    <string name="relative_like">猜您可能还喜欢：</string>
    <string name="gamedetail_comment_empty">亲，暂时还没有评论，\n快来抢沙发吧！</string>
    <string name="web_error">"哎呀，网络出错了！"</string>
    <string name="web_error_reason">"可能的原因有：\n无法连接网络\n该页面不存在或出现故障"</string>
    <string name="web_reload">"刷新页面"</string>
    <string name="set_network">"设置网络"</string>
    <string name="regist">快速注册</string>
    <string name="next">下一步</string>
    <string name="login_account">登录账号</string>
    <string name="username_hint">手机号</string>
    <string name="password_hint">请输入6&#8211;20位新密码</string>
    <string name="symbol">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~:;{}[],.!·€@#$%^*()_-=+*/`|\?﹉&#8230;&lt;&gt;&#165;&#038;\&#039;\&#034;&#8211;\\</string>
    <string name="agree">我同意《用户协议和隐私条款》</string>
    <string name="lost_password"><u>忘记密码</u></string>
    <string name="input_password_hint">密码</string>
    <string name="input_password_pic_des">请输入验证码</string>
    <string name="to_get_codes">获取验证码</string>
    <string name="regist_koobee_set_password">设置密码</string>
    <string name="other_retrieve"><u>使用其他方式找回</u></string>
    <string name="complete">完成</string>
    <string name="confirm_password">再次输入新密码</string>
    <string name="register_account">注册账号</string>
    <string name="register_account_msg">您的手机将发送一条普通短信用于注册新的账号</string>
    <string name="confirm">确定</string>
    <string name="regist_koobee">注册账号</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="use_own_phone_two"><u>使用本机号码注册</u></string>
    <string name="set_password">设置密码</string>
    <string name="msg_security_code">请输入验证码</string>
    <string name="send_security_code">发送验证码</string>
    <string name="please_input_password">请输入8&#8211;16位新密码</string>
    <string name="password_tip">密码由数字、字母或英文符号组成</string>
</resources>