<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_f5f5f5">

        <ImageView
            android:id="@+id/actionbar_title_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/action_bar_back_normal"
            android:paddingLeft="4dp"
            android:layout_centerVertical="true"
          />

        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:onClick="onBackClk"
            android:text="@string/regist_koobee"
            android:textColor="#555"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d7d7d7" />

    <EditText
        android:id="@+id/phone_edit_id"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/cloud_common_edit_bg"
        android:digits="@string/symbol"
        android:drawableLeft="@drawable/regist_phone_num"
        android:drawablePadding="14dp"
        android:hint="@string/please_input_phone"
        android:inputType="phone"
        android:maxLength="11"
        android:paddingLeft="27dp"
        android:paddingRight="25dp"
        android:singleLine="true"
        android:textColor="@color/text_color_6c6c6c"
        android:textColorHint="@color/prize_text_default"
        android:textSize="@dimen/text_size_30"/>

    <TextView
        android:id="@+id/regist_agree_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_30"
        android:drawableLeft="@drawable/cloud_agree"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:text="@string/agree"
        android:textColor="@color/text_color_12b7f5"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/regist_next_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cloud_next_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#fff"
        android:textSize="@dimen/text_size_30"/>

    <TextView
        android:id="@+id/regist_other_phone_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/use_own_phone_two"
        android:textColor="#D4D4D4"
        android:textSize="12sp" />

</LinearLayout>