<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/action_bar_back_normal"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/title_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:onClick="onBackClk"
            android:text="@string/set_password"
            android:textColor="#555"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d7d7d7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/msg_code_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cloud_shurukuang"
            android:gravity="center_vertical"
            android:hint="@string/msg_security_code"
            android:maxLength="8"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/prize_text_default"
            android:textColorHint="#c8c8c8"
            android:textSize="@dimen/text_size_30" />

        <TextView
            android:id="@+id/sendtv_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/cloud_codes_security_selector"
            android:gravity="center"
            android:minWidth="90dp"
            android:singleLine="true"
            android:text="@string/send_security_code"
            android:textColor="#ffffff"
            android:textSize="@dimen/text_size_30" >
        </TextView>
    </LinearLayout>

    <EditText
        android:id="@+id/password_id"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/cloud_shurukuang"
        android:digits="@string/symbol"
        android:gravity="center_vertical"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/prize_text_default"
        android:textColorHint="#c8c8c8"
        android:textSize="@dimen/text_size_30" >
    </EditText>

    <EditText
        android:id="@+id/confirm_password_id"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cloud_shurukuang"
        android:digits="@string/symbol"
        android:gravity="center_vertical"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColor="@color/prize_text_default"
        android:textColorHint="#c8c8c8"
        android:textSize="@dimen/text_size_30" >
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_30"
        android:drawablePadding="6dp"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/password_tip"
        android:textColor="@color/text_color_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/confirmtn_id"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/cloud_next_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/login_color"
        android:textSize="@dimen/text_size_30" >
    </TextView>

</LinearLayout>