<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/error_lay"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/reload_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:singleLine="true"
        android:text="@string/web_error"
        android:textColor="@color/text_color_737373"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_error_reason"
        android:textColor="@color/text_color_969696"
        android:textSize="11sp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_reload"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:background="@drawable/web_btn_selector"
            android:onClick="onClick"
            android:text="@string/web_reload"
            android:textColor="@color/web_progress_color"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_set_net"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginLeft="12dp"
            android:background="@drawable/web_btn_selector"
            android:onClick="onClick"
            android:text="@string/set_network"
            android:textColor="@color/web_progress_color"
            android:textSize="12sp" />
    </TableRow>
</LinearLayout>
