<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/pop_height"
    android:background="#F5F5F5"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:text="@string/register_account"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="38dp"
        android:text="@string/register_account_msg"
        android:textColor="#77000000"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/cloud_kb_main_cancel_selector"
            android:clickable="true"
            android:text="@string/cancel"
            android:textColor="@color/prize_text_default"
            android:textSize="@dimen/text_size_30" />

        <Button
            android:id="@+id/sure_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:background="@drawable/cloud_kb_main_sure_selector"
            android:clickable="true"
            android:text="@string/confirm"
            android:textColor="@color/prize_text_default"
            android:textSize="@dimen/text_size_30" />
    </LinearLayout>

</LinearLayout>
