<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color_f5f5f5" >

        <ImageView
            android:id="@+id/actionbar_title_back"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/action_bar_back_normal"
            android:paddingLeft="4dp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/title_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:onClick="onBackClk"
            android:text="@string/regist_koobee_set_password"
            android:textColor="#555"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d7d7d7" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/cloud_common_edit_bg"
        android:paddingLeft="25dp"
        android:paddingRight="25dp" >

        <ImageView
            android:id="@+id/cloud_return_codes_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:background="@drawable/send_codes_return"
            android:contentDescription="@string/input_password_pic_des"
            android:scaleType="fitXY" />

        <EditText
            android:id="@+id/msg_code_edit"
            style="@style/cloud_phone_num_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/sendtv_code"
            android:layout_toRightOf="@+id/cloud_return_codes_iv"
            android:ems="6"
            android:hint="@string/input_password_pic_des" />

        <TextView
            android:id="@+id/sendtv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/cloud_codes_security_selector"
            android:gravity="center"
            android:scaleType="fitXY"
            android:text="@string/to_get_codes"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <EditText
        android:id="@+id/password_edit_id"
        style="@style/cloud_login_password_style"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/cloud_common_edit_bg"
        android:digits="@string/symbol"
        android:ems="10"
        android:hint="@string/password_hint" >
    </EditText>

    <EditText
        android:id="@+id/confirm_password_id"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/cloud_common_edit_bg"
        android:digits="@string/symbol"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingLeft="61dp"
        android:paddingRight="25dp"
        android:singleLine="true"
        android:textColor="@color/text_color_6c6c6c"
        android:textColorHint="@color/prize_text_default"
        android:textSize="@dimen/text_size_30" >
    </EditText>

    <!--
           <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingLeft="25dp"
        android:text="@string/password_tip"
        android:textColor="@color/prize_text_hint_coler"
        android:textSize="12sp" />
    -->

    <TextView
        android:id="@+id/loginbtn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/cloud_next_selector"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_30" >
    </TextView>

    <TextView
        android:id="@+id/find_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:text="@string/other_retrieve"
        android:textColor="@color/other_color"
        android:textSize="12sp"
        android:visibility="gone" >
    </TextView>

</LinearLayout>